@@ -87,7 +87,7 @@ task fatJar(type: Jar) {
 def arch = System.getProperty("os.arch") ?: "amd64"
 
 task downloadGraalvm(type: Download) {
-  src "https://github.com/graalvm/graalvm-ce-dev-builds/releases/download/22.3.0-dev-20220910_0035/graalvm-ce-java17-linux-amd64-dev.tar.gz"
+  src "https://github.com/graalvm/graalvm-ce-dev-builds/releases/download/23.0.0-dev-20221011_2158/graalvm-ce-java19-linux-amd64-dev.tar.gz"
   dest new java.io.File(buildDir, "graalvm.tar.gz")
   onlyIfModified true
 }
@@ -98,15 +98,16 @@ task extractGraalvm(dependsOn: downloadGraalvm, type: Exec) {
 }
 
 nativeImage {
-  graalVmHome = "${buildDir}/graalvm-ce-java17-22.3.0-dev"
+  graalVmHome = "${buildDir}/graalvm-ce-java19-23.0.0-dev"
   mainClass = "com.github.tonivade.todo.Application"
   executableName = "todo-backend"
   arguments(
           '--verbose',
           '--report-unsupported-elements-at-runtime',
-          '--initialize-at-build-time',
           '--no-fallback',
+          '--enable-preview',
           '--allow-incomplete-classpath',
+          '--initialize-at-run-time=com.oracle.truffle.js.scriptengine.GraalJSEngineFactory',
           '-H:IncludeResources=application.toml',
           '-H:ReflectionConfigurationFiles=src/native-image/reflection.json'
   )
